# lightecdh

./: README.md  build.sh  meson.build
src/: lightecdh.c  lightecdh.h  lightecdh_bitmath.c  lightecdh_bitmath.h  lightecdh_curves.c  lightecdh_curves.h  lightecdh_pointmath.c  lightecdh_pointmath.h  lightecdh_random.c  lightecdh_random.h  test_lightecdh.c
